--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_cache_manager: ^0.2.0+1
+#  flutter_cache_manager: ^0.2.0+1
+  flutter_cache_manager:
+    git:
+      url: git://github.com/xyris-software/flutter_cache_manager.git
 
 dev_dependencies:
   test: ^1.3.0
